# objectref

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/objectref/: __init__.py
tests/: test_package.py
